# cliphist-cosmic

./: AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.md  install.sh  justfile  test.rs
.gemini/: GEMINI.md
.github/workflows/: build-release.yml
src/: app.rs  cliphist.rs  config.rs  image_state.rs  keyboard.rs  main.rs  messages.rs  models.rs  utils.rs  view.rs  vim.rs
