[package]
name = "cliphist-cosmic"
version = "0.1.0"
edition = "2024"
description = "A Wayland clipboard picker built with libcosmic and cliphist"
readme = "README.md"
rust-version = "1.85"
keywords = ["wayland", "clipboard", "cliphist", "cosmic", "vim"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
libcosmic = { git = "https://github.com/pop-os/libcosmic.git" }

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"
