[package]
name = "cliphist-cosmic"
version = "0.1.0"
edition = "2024"
description = "A Wayland clipboard picker built with libcosmic and cliphist"
readme = "README.md"
rust-version = "1.85"
keywords = ["wayland", "clipboard", "cliphist", "cosmic", "vim"]
categories = ["command-line-utilities"]
repository = "https://github.com/Mohamed-Badry/cliphist-cosmic"
homepage = "https://github.com/Mohamed-Badry/cliphist-cosmic"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
image = { version = "0.25.8", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
libc = "0.2"
libcosmic = { git = "https://github.com/pop-os/libcosmic.git" }
tokio = { version = "1.50.0", features = [
    "process",
    "io-util",
    "rt",
    "rt-multi-thread",
] }

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"
